<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/navigate_up"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/navigate_up"
            android:src="@drawable/ic_hamburger_menu" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="22dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/trade_by_bata"
            android:textAppearance="@style/Headline1TextAppearanceBold"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/gray_500"
                android:padding="3dp"
                android:scaleType="centerCrop"
                app:shapeAppearance="@style/ImageRoundedSquare"
                app:strokeColor="@color/gray_700"
                app:strokeWidth="1.5dp"
                tools:src="@drawable/test_profile_image" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/location"
                android:textAppearance="@style/Label2TextAppearanceRegular"
                android:textColor="@color/gray_500"
                app:drawableEndCompat="@drawable/ic_arrow_down_no_line" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconDrawable="@drawable/ic_search"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:hint="@string/what_are_you_looking_for"
            android:imeOptions="actionSearch"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <include layout="@layout/category_container" />

    </HorizontalScrollView>


</LinearLayout>


